welcome email template fix

--- a/templates/email/welcome.html
+++ b/templates/email/welcome.html
@@ -5,7 +5,7 @@ Howdy {{user.first_name}}&nbsp;{{user.last_name}}!
 {% block email_body %}
 Welcome to Listypedia. Start creating and collaborating on lists.
 <br/>
-If you find anything usual, have any feature requests or just want to say hi, pleaes don't hesitate. Shoot us an email!
+If you find anything unusual, have any feature requests or just want to say hi, pleaes don't hesitate. Shoot us an email!
 <br/>
 <br/>
 Team Listypedia.
