--- a/templates/email/_base.html
+++ b/templates/email/_base.html
@@ -247,7 +247,7 @@ ul.sidebar li a h1,ul.sidebar li a h2,ul.sidebar li a h3,ul.sidebar li a h4,ul.s
                 <div class="content">
                 <table bgcolor="#999999">
                     <tr>
-                        <td><img src="http://localhost:8000/site_media/images/logo-full-378.png" height="50" /></td>
+                        <td><img src="http://www.listypedia.com/site_media/images/logo-full-378.png" height="50" /></td>
                         <td align="right"><h6 class="collapse">Social, Curated Lists</h6></td>
                     </tr>
                 </table>
