--- a/templates/email/base.html
+++ b/templates/email/base.html
@@ -22,7 +22,7 @@
                 <div class="content" style="max-width: 600px; margin: 0 auto; padding: 15px; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; display: block;">
                 <table style="margin: 0; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; padding: 0; width: 100%;" bgcolor="#999999">
                     <tr style="margin: 0; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; padding: 0;">
-                        <td style="margin: 0; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; padding: 0;"><img src="http://localhost:8000/site_media/images/logo-full-378.png" height="50" style="max-width: 100%; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; margin: 0; padding: 0;" /></td>
+                        <td style="margin: 0; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; padding: 0;"><img src="http://www.listypedia.com/site_media/images/logo-full-378.png" height="50" style="max-width: 100%; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; margin: 0; padding: 0;" /></td>
                         <td align="right" style="margin: 0; font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; padding: 0;"><h6 class="collapse" style="font-size: 14px; font-weight: 900; text-transform: uppercase; line-height: 1.1; font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; margin: 0; color: #444; padding: 0;">Social, Curated Lists</h6></td>
                     </tr>
                 </table>
