--- a/templates/email/follow_confirmation.html
+++ b/templates/email/follow_confirmation.html
@@ -3,7 +3,7 @@
 Howdy! {{user.first_name}}&nbsp;{{user.last_name}}
 {% endblock %}
 {% block email_body %}
-You are now following <a href="http://www.listypedia.com/list/{{list.slug}}">{{list.name}}</a>.
+You are now following <a href="http://www.listypedia.com/{{ list.url }}/">{{list.name}}</a>.
 <br/>
 We will send you a notification when a new item is added to the list!
 <br/>
