--- a/templates/email/item_add_notification.html
+++ b/templates/email/item_add_notification.html
@@ -5,7 +5,7 @@ Hello {{user.first_name}}&nbsp;{{user.last_name}}!
 {% block email_body %}
 {{user.first_name}} added {{item.name}} to {{list.name}}
 <br>
-See the full list at <a href="http://www.listypedia.com/list/{{list.slug}}">{{list.name}}</a>
+See the full list at <a href="http://www.listypedia.com/{{ list.url }}/">{{list.name}}</a>
 <br/>
 <br/>
 Team Listypedia.
