--- a/templates/follow_confirmation.html
+++ b/templates/follow_confirmation.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="marketing">
-    <h1>You are now following <a href="/list/{{list.slug}}">{{list.name}}</a></h1>
+    <h1>You are now following <a href="/{{ list.url }}/">{{list.name}}</a></h1>
     <p class="lead">You will recieve an email notification when a new item is added</p>
     <br>
     <p class="marketing-byline">Search for other interesting lists.</p>
