--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
     </div>
     <input type="hidden" name="next" value="{{ next }}" />
     <div class="form-actions">
-        <button type="submit" class="btn btn-primary btn-large btn-flat">Submit</button>
+        <button type="submit" class="btn btn-primary btn-large btn-flat">Login</button>
         <a href="/signup" class="btn btn-primary btn-large btn-info btn-flat">Sign Up?</a>
     </div>
 </form>
