--- a/site_media/css/index.css
+++ b/site_media/css/index.css
@@ -9,6 +9,7 @@ body {
 
 .pull-center {
     text-align: center;
+    margin: 0 auto;
 }
 
 /* Wrapper for page content to push down footer */
@@ -127,6 +128,11 @@ hr.soften {
   margin-bottom: 5px;
 }
 
+.marketing h2.home {
+    font-size: 44px;
+    margin-top: 0;
+}
+
 .header {
   color: #5a5a5a;
 }
@@ -157,32 +163,47 @@ hr.soften {
   margin-bottom: 5px;
 }
 
+
 .list-post {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background: none repeat scroll 0 0 rgba(250, 250, 250, 0.7);
-  border: 1px solid #e3e3e3;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid #DEDEDE;
+    margin-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .list-post h3 {
     margin: 0;
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 .list-post p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300;
     line-height: 25px;
 }
+
+.list-post .fav {
+    margin-top: -7px;
+}
+
+.list-post span.list-post-link, .list-post span.list-post-text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 40px;
+}
+
+.list-post blockquote {
+    margin-bottom: 10px;
+}
+
 .list-post hr {
     margin: 12px 0;
+}
+
+.list-post fav {
+    background-position: 0 0;
+    height: 16px;
+    width: 16px;
 }
 
 .list-post form {
