--- a/templates/index.html
+++ b/templates/index.html
@@ -23,36 +23,15 @@
 <div class="featured">
     <h2 class="pull-center">See what others are listing</h2>
     {% for list in featured_lists %}
-    {% if forloop.counter0|divisibleby:"3" %}
-    <div class="row">
-    {% endif %}
-    <div class="span4 list-widget">
-        <a href="/{{ list.url }}/"><h4>{{ list.name }}</h4></a>
-        <hr>
-        <ul class="unstyled">
-            {% for item in list.featured_items %}
-                <li>
-                    {% if item.url %}
-                        <img class="fav" src="https://www.google.com/s2/u/0/favicons?domain={{ item.url_domain }}">
-                        <span>
-                            <a href="{{ item.url }}">{{ item.name }}</a>
-                        </span>
-                    {% else %}
-                        <img class="fav" src="https://www.google.com/s2/u/0/favicons?domain=listypedia.com">
-                        <span>
-                            {{ item.name }}
-                        </span>
-                    {% endif %}
-                </li>
-            {% endfor %}
-        </ul>
-        <span class="all-link">
-            <a href="/{{ list.url }}/">View all items →</a>
-        </span>
-    </div>
-    {% if forloop.last or forloop.counter|divisibleby:"3" %}
-    </div>
-    {% endif %}
+        {% if forloop.counter0|divisibleby:"3" %}
+        <div class="row">
+        {% endif %}
+        <div class="span4">
+            {% include "list-widget.html" %}
+        </div>
+        {% if forloop.last or forloop.counter|divisibleby:"3" %}
+        </div>
+        {% endif %}
     {% endfor %}
 </div>
 
