--- a/site_media/css/index.css
+++ b/site_media/css/index.css
@@ -287,6 +287,7 @@ hr.soften {
 
 .list-widget {
     padding: 15px;
+    margin: 10px 5px 25px 5px;
     background-color: white;
       -webkit-border-radius: 4px;
          -moz-border-radius: 4px;
